﻿25.3.20.3
=========
 + Ignore a fake temporary SwapChain created by Anvil engine during
     Assassin's Creed Shadows startup, to reduce compatiblity issues.

25.3.20.2
=========
 + Disable nearly all audio-related code when running SK under Proton;
     dealing with their constantly broken Windows audio API implementations
       is a complete waste of time.
 + Distinguish "Audio Management" from "Spatial Audio Management" in SK's
     control panel for games that use spatial audio APIs.

   * For now this is a quick way to verify whether a game uses Atmos, DTX:X,
       Windows Sonic, etc.

    Eventually static spatial channel volume control will be introduced,
      similar to the current surround sound volume controls. A positional
        audio visualizer may also be created...

25.3.20.1
=========
 + Disable Reflex Low Latency mode in Assassin's Creed Shadows because the
     game's Reflex integration is the worst ever seen, and frame generation
       (DLSS-G) does not work unless low latency is disabled.

 @ Ubisoft, add markers for Simulation/Render Submit, or Reflex does not work!

25.3.20
=======
 + Fixed potential infinite framerate limiter wait when VRR limiter mode is
     active and there is no established SwapChain yet.

25.3.11.2
=========
 + Disable Low-Level Keyboard Hook if AutoHotkey is running before a game
     is launched to avoid bugs in AHK's hook management in some games.

25.3.11.1
=========
 + Change NvAPI call failures from message boxes to log entries instead.

25.3.11
=======
 + Added support for extracting 7Zip files using RunDLL on Special K's DLL

     rundll32 "SpecialK64.dll", RunDLL_Extract7Zip NameOf7ZipFile.7z

25.3.10.8
=========
 + Force native pacing mode to use low-latency mode in Monster Hunter Wilds

25.3.10.7
=========
 + Always show DLSS Auto Exposure options, even if the game does not use it.
 + Fallback to Normal mode for native pacing if a game is not using Input